--- a/mybib.bib
+++ b/mybib.bib
@@ -24,6 +24,12 @@ author = {Gron{\'a}t, Petr},
 title = {Project webpage: Learning and calibrating per-location classifiers for visual place recognition},
 url = {http://www.di.ens.fr/willow/research/perlocation/}
 }
+@misc{Torii15project,
+author = {Torii, A.},
+title = {Project webpage: 24/7 Place Recognition by View Synthesis},
+url = {http://www.ok.ctrl.titech.ac.jp/~torii/project/247/}
+}
+
 @inproceedings{Cao13,
   author = {Cao, Song and Snavely, Noah},
   booktitle = {CVPR},
