minor edit scalability

--- a/template.tex
+++ b/template.tex
@@ -946,8 +946,7 @@ However, we believe that scaling-up towards place recognition in entire cities i
 %}
 
 \textcolor{petr}{
-    At query time our method needs to compute the calibrated e-SVM score~\eqref{eq:linear} of the query for each image in the database. In the case of w-norm method the calibration weights can be included in the classifier weight matrix, as discussed in section~\ref{sec:memory}. For the p-val calibration method, each e-SVM score must be calibrated using $K$ stored values of the non-parametric CDF model. This requires a search for the two closest values and subsequent interpolation, which yields complexity of $O(N\log{K})$. Since $K$ is only a constant both methods have a linear time complexity at query time, but with a different constant. The actual running time per query is $340ms$ for the bag-of-visual-words representation with p-val calibration and $3ms$ for the FV128 descriptor with w-norm calibration. Both timings are on the 25k Pittsburgh dataset on a desktop with ***.    
-%   Again, the query time can be sped-up using sub-linear approximate nearest neighbor search~\cite{Flann2014} on compressed descriptors~\cite{Jegou11}.    
+    At query time our method needs to compute the calibrated e-SVM score (equation~\eqref{eq:linear}) of the query for each image in the database. In the case of w-norm method the calibration weights can be included in the classifier weight matrix, as discussed in section~\ref{sec:memory}. For the p-val calibration method, each e-SVM score must be calibrated using $K$ stored values of the non-parametric CDF model. This requires a search for the two closest values and subsequent interpolation, which yields complexity of $O(N\log{K})$. Since $K$ is only a constant both methods have a linear time complexity at query time but with different constants. However, in practice the constant in the p-val method can be quite large. The actual running time per query is $340ms$ for the bag-of-visual-words representation with p-val calibration and $3ms$ for the FV128 descriptor with w-norm calibration. Both timings are on the 25k Pittsburgh dataset on a desktop with ***.   Hence in practice, the p-val method may be scalable only to medium size datasets. For the w-norm method, the query time can be sped-up using sub-linear approximate nearest neighbor search~\cite{Flann2014} on compressed descriptors~\cite{Jegou11}, making the method potentially scalable to very large datasets.
 %=======
 %    At query time the calibrated e-SVM score~\eqref{eq:linear} must be computed. In case of w-norm method the calibration can be explicitly stored in a weight matrix. For p-val calibration method, each e-SVM score must be calibrated using $K$ stored values of the non-parametric CDF model. This requires to search for two closest values an interpolate between them \eqref{eq:empiricalCDF} which yields complexity of $O(N\log{K})$. Since $K$ is a constant both methods have linear time complexity at query time with different constant. The actual running time per query on bag-of-words is $340ms$ for p-val calibration and $3ms$ for w-norm method.
 %>>>>>>> e8ac2ebdb38bb1a9fd90abfcbb4514b92c182702
