after josef, aux commit

--- a/tableResults03.tex
+++ b/tableResults03.tex
@@ -16,7 +16,7 @@
     BOW           & 28.7  & 35.7  & 45.8 & 53.7   & 61.5 \\
       \rowcolor{maroon!10}
     
-    \textcolor{petr}{BOW  Knopp[]}  & \textcolor{petr}{29.6}  
+    \textcolor{petr}{BOW  Conf. supp~\cite{Knopp2010}}  & \textcolor{petr}{29.6}  
                                     & \textcolor{petr}{37.3}  
                                     & \textcolor{petr}{48.9} 
                                     & \textcolor{petr}{59.3}   
